--- a/app/views/fulcrum/_products.html.erb
+++ b/app/views/fulcrum/_products.html.erb
@@ -14,25 +14,22 @@
       <th><label for="identifier_like">Identifier</label></th>
       <th><label for="name_like">Name</label></th>
       <th>Components</th>
-      <th>Subscribers</th>
     </tr>
     <tr>
       <td><button name="submit" type="submit" value="filter">Filter</button></td>
       <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
       <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></td>
       <td></td>
-      <td></td>
     </tr>
     <% products.each do |product| %>
       <tr>
-        <td><%= link_to(fulcrum_partial_path(:products, Base64.urlsafe_encode64(product.identifier))) do %>
+        <td><%= link_to(product_path(product)) do %>
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
         <td><%= product.identifier %></td>
         <td><%= product.name %></td>
-        <td><%= product.components.count %></td>
-        <td><%= Greensub.product_subscribers(product).count %></td>
+        <td><%= link_to product.components.count, product_components_path(product) %></td>
       </tr>
     <% end %>
   </table>
