--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -1,5 +1,5 @@
 <% riiif_url = "/image-service/#{file_set.id}/info.json#{file_set.image_cache_breaker}" %>
-<div id="image"></div>
+<div id="image" style="height:100%;"></div>
 <script>
     var map, layer, timer;
 
