--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,15 +2,15 @@
 <div id="maincontent">
   <h1>Product</h1>
   <div class="col-md-1"><em>ID</em></div>
-  <div class="col-md-11"><%= @product.id %></div>
+  <div class="col-md-11">&nbsp;<%= @product.id %></div>
   <div class="col-md-1"><em>Identifier</em></div>
-  <div class="col-md-11">&nbsp<%= @product.identifier %></div>
+  <div class="col-md-11">&nbsp;<%= @product.identifier %></div>
   <div class="col-md-1"><em>Name</em></div>
-  <div class="col-md-11">&nbsp<%= @product.name %></div>
+  <div class="col-md-11">&nbsp;<%= @product.name %></div>
   <div class="col-md-1"><em>Purchase</em></div>
-  <div class="col-md-11">&nbsp<%= @product.purchase %></div>
+  <div class="col-md-11">&nbsp;<%= @product.purchase %></div>
   <div class="col-md-1"><em>Components</em></div>
-  <div class="col-md-11">&nbsp<%= link_to @product.components.count, product_components_path(@product) %></div>
+  <div class="col-md-11">&nbsp;<%= link_to @product.components.count, product_components_path(@product) %></div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
     <%= link_to_if @product.update?, 'Edit', edit_product_path(@product) %>
