--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -8,30 +8,35 @@
   <b>
     <div class="col-md-10">
       <div class="col-md-1">ID</div>
-      <div class="col-md-2">Identifier</div>
-      <div class="col-md-4">Name</div>
+      <div class="col-md-6"><div>Identifier</div><div>Name</div></div>
       <div class="col-md-1">FileSet</div>
       <div class="col-md-2">Monograph</div>
-      <div class="col-md-2">Products</div>
+      <div class="col-md-1">Products</div>
     </div>
     <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
     <div class="col-md-12"><hr/></div>
   </b>
   <% @components.each do |component| %>
     <%
-      file_set = FileSet.find(component.noid) if component.file_set?
-      file_set_id = file_set&.id || 0
-      monograph = file_set&.parent
-      monograph ||= Monograph.find(component.noid) if component.monograph?
-      monograph_id = monograph&.id || 0
+      entity = Sighrax.factory(component.noid)
+      monograph_id = 0
+      file_set_id = 0
+      if entity.is_a?(Sighrax::Monograph)
+        monograph = entity
+        monograph_id = entity.noid
+      else
+        file_set = entity
+        file_set_id = entity.noid
+        monograph = file_set.parent
+        monograph_id = monograph.noid
+      end
     %>
     <div class="col-md-10">
       <div class="col-md-1"><%= component.id %></div>
-      <div class="col-md-2"><%= component.identifier %></div>
-      <div class="col-md-4"><%= component.name %></div>
-      <div class="col-md-1">&nbsp<%= link_to_if file_set.present?, file_set_id, hyrax_file_set_path(file_set_id) %></div>
-      <div class="col-md-2">&nbsp<%= link_to_if monograph.present?, monograph_id, hyrax_monograph_path(monograph_id) %></div>
-      <div class="col-md-2"><%= component.products.count %></div>
+      <div class="col-md-6"><div><%= component.identifier %></div><div><%= component.name %></div>&nbsp;</div>
+      <div class="col-md-1">&nbsp;<%= link_to_if file_set.present?, file_set_id, hyrax_file_set_path(file_set_id) %></div>
+      <div class="col-md-2">&nbsp;<%= link_to_if monograph.present?, monograph_id, hyrax_monograph_path(monograph_id) %></div>
+      <div class="col-md-1">&nbsp;<%= link_to component.products.count, component_products_path(component) %></div>
     </div>
     <div class="col-md-2">
       <div class="col-md-4"><%= link_to 'Show', component %></div>
