--- a/app/views/individuals/index.html.erb
+++ b/app/views/individuals/index.html.erb
@@ -18,7 +18,7 @@
       <div class="col-md-3"><%= individual.identifier %></div>
       <div class="col-md-3"><%= individual.name %></div>
       <div class="col-md-3"><%= individual.email %></div>
-      <div class="col-md-2"><%= Greensub.subscriber_products(individual).count %></div>
+      <div class="col-md-2"><%= link_to individual.products.count, individual_products_path(individual) %></div>
     </div>
     <div class="col-md-2">
       <div class="col-md-4"><%= link_to 'Show', individual %></div>
