--- a/app/views/institutions/_products.html.erb
+++ b/app/views/institutions/_products.html.erb
@@ -11,7 +11,7 @@
 </b>
 <% products.each do |product| %>
   <div class="col-md-10">
-    <div class="col-md-1"><%= product.identifier %></div>
+    <div class="col-md-1"><%= link_to product.identifier, product_path(product) %></div>
     <div class="col-md-3"></div>
     <div class="col-md-3"></div>
     <div class="col-md-3"></div>
