--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -2,21 +2,21 @@
 <div id="maincontent">
   <h1>Institution</h1>
   <div class="col-md-1"><em>ID</em></div>
-  <div class="col-md-11"><%= @institution.id %></div>
+  <div class="col-md-11">&nbsp;<%= @institution.id %></div>
   <div class="col-md-1"><em>Identifier</em></div>
-  <div class="col-md-11">&nbsp<%= @institution.identifier %></div>
+  <div class="col-md-11">&nbsp;<%= @institution.identifier %></div>
   <div class="col-md-1"><em>Name</em></div>
-  <div class="col-md-11">&nbsp<%= @institution.name %></div>
+  <div class="col-md-11">&nbsp;<%= @institution.name %></div>
   <div class="col-md-1"><em>Entity ID</em></div>
-  <div class="col-md-11">&nbsp<%= @institution.entity_id %></div>
+  <div class="col-md-11">&nbsp;<%= @institution.entity_id %></div>
   <div class="col-md-1"><em>Site</em></div>
-  <div class="col-md-11">&nbsp<%= @institution.site %></div>
+  <div class="col-md-11">&nbsp;<%= @institution.site %></div>
   <div class="col-md-1"><em>Login</em></div>
-  <div class="col-md-11">&nbsp<%= @institution.login %></div>
+  <div class="col-md-11">&nbsp;<%= @institution.login %></div>
   <div class="col-md-12"><br/></div>
   <h2>Products</h2>
   <div class="col-md-12">
-    <%= render partial: '/institutions/products', locals: { institution: @institution, products: Greensub.subscriber_products(@institution) } %>
+    <%= render partial: '/institutions/products', locals: { institution: @institution, products: @institution.products } %>
   </div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
