HELIO-2557 Change Share Link duration from 2 to 28 days

--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -423,7 +423,7 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
         modal = reader.modal({
                 region: 'left',
                 title: 'Share Temporary Access to this Book',
-                template: '<p>The following URL can be shared with non-subscribing users to provide them with temporary access to this restricted work for 48 hours:</p> <blockquote id="share-link" style="padding: 8px; border-left: 4px solid black; background-color: #fff; word-wrap:break-word;"></blockquote><p>The URL can be copied to your clipboard using the button below or manually copied by highlighting the text.</p><p>After 48 hours the link will expire and no longer work.</p><div class="alert alert-info" id="message" style="display: none"></div>',
+                template: '<p>The following URL can be shared with non-subscribing users to provide them with temporary access to this restricted work for 28 days:</p> <blockquote id="share-link" style="padding: 8px; border-left: 4px solid black; background-color: #fff; word-wrap:break-word;"></blockquote><p>The URL can be copied to your clipboard using the button below or manually copied by highlighting the text.</p><p>After 28 days the link will expire and no longer work.</p><div class="alert alert-info" id="message" style="display: none"></div>',
                 fraction: 0.5,
                 actions: [
                   {
