HELIO-2515 - adjust css so partner with us text is not cutoff on smaller screens

--- a/fulcrum/_sass/custom.scss
+++ b/fulcrum/_sass/custom.scss
@@ -157,7 +157,11 @@ p.blurb {
   }
 
   a:hover, a:active {
-    border-bottom: 3px solid transparent;
+    border-bottom: 0px solid transparent;
+  }
+
+  a.btn-large {
+    height: auto;
   }
 }
 
