--- a/app/views/presses/_form.html.erb
+++ b/app/views/presses/_form.html.erb
@@ -33,7 +33,7 @@
   <%= f.input :footer_block_a %>
   <%= f.input :footer_block_b %>
   <%= f.input :footer_block_c %>
-  <%= f.input :parent_id, collection: Press.parent_presses, prompt: "Choose a parent press (optional)" %>
+  <%= f.input :parent_id, collection: Press.parent_presses, include_blank: true, prompt: "Choose a parent press (optional)" %>
   <%= f.input :restricted_message, label: 'Message for restricted works (if any). HTML is ok' %>
   <%= f.input :share_links, label: 'Allow "share links" for temporary access of restricted materials?', as: :radio_buttons, collection: [['Yes', true], ['No', false]], default: false %>
   <%= f.submit label: 'Save Publisher' %>
